--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam deleniti reprehenderit ipsum voluptatem maiores, rem facilis voluptate officiis quia, eveniet quidem iste autem voluptatum! In voluptate voluptates est non excepturi.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi nihil, quos excepturi sunt eos laudantium dicta iste accusantium et molestiae atque recusandae reprehenderit laboriosam at, iure eum distinctio sed provident!</p>
         </article>
     </main>
 </body>
