--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam deleniti reprehenderit ipsum voluptatem maiores, rem facilis voluptate officiis quia, eveniet quidem iste autem voluptatum! In voluptate voluptates est non excepturi.</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
         </article>
         <article>
             <h2>Curso de Javascript</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi nihil, quos excepturi sunt eos laudantium dicta iste accusantium et molestiae atque recusandae reprehenderit laboriosam at, iure eum distinctio sed provident!</p>
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
         </article>
     </main>
 </body>
